license = "MIT"
license-files = [
    "LICENSE",
]

[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.MATC1AUncontestedDivorce"
version = "1.0"
description = "Joint Divorce Petition"
readme = "README.md"
authors = [
    { name = "Court Forms Online", email = "litlab@suffolk.edu" },
]
dependencies = [
    "docassemble.ALMassachusetts @ git+https://github.com/SuffolkLITLab/docassemble-ALMassachusetts.git@main",
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
]

[project.urls]
Homepage = "https://courtformsonline.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
